# RPG-snake

./: .gitignore  CMakeLists.txt  CTestCustom.cmake  Makefile  cmake_install.cmake  engineTest.cpp  kbhit.cpp  kbhit.h  launchTest.cpp  main  main.cpp  nextSteps.txt  readme.md  test.cpp  tests
TextRenderer/: TextRenderer.cpp
controller/: gameController.cpp  gameController.h  gridController.cpp  gridController.h  iEatListener.h  iGameController.h
design/: gridelementInteraction.xmi  npc_dialog_system.txt
model/: grid.cpp  grid.h  snake.cpp  snake.h
resources/level/: level1  level2
resources/shaders/: color.fs  color.vs
src/: commonFunctions.cpp  commonFunctions.h  editor.cpp  main.cpp
src/controller/: gameController.cpp  gameController.h  gridController.cpp  gridController.h  iEatListener.h  iGameController.h  iGridController.h  iSoundController.h  soundController.cpp  soundController.h  spriteController.cpp  spriteController.h
src/editor/: loadTextFile.cpp  loadTextFile.h
src/editor/controller/: editorController.cpp  editorController.h
src/editor/view/: editorView.cpp  editorView.h
src/model/: gameMode.cpp  gameMode.h  grid.cpp  grid.h  gridElement.cpp  gridElement.h  iGrid.h  iSnake.h  mob.cpp  mob.h  npc.cpp  npc.h  quest.cpp  quest.h  snake.cpp  snake.h  teleporter.cpp  teleporter.h  winCondition.cpp  winCondition.h
src/resources/level/: level1  level1txt  level2  level2txt  level3
src/resources/shaders/: color.vs
src/resources/tests/level/: NPCDialog  editorTest  level1  level1Binary  level2Binary  levelWithNPC  levelWithTeleporter  levelWithWincon  levelWithWincon2  levelWithWincon2Binary  levelWithWinconBinary
src/resources/textures/: background.ase  button-pressed.ase  button.ase  grid.ase
src/services/: gameControllerService.cpp  gameControllerService.h  gameModeService.cpp  gameModeService.h
src/view/: cliView.cpp  cliView.h  dialog.cpp  dialog.h  glView.cpp  glView.h  iGameView.h
src/view/engine/: iEngineCallback.h  iRenderEngine.cpp  iRenderEngine.h  renderData.cpp  renderData.h  renderEngine.cpp  renderEngine.h
src/view/engine/TextRenderer/: TextRenderer.cpp  TextRenderer.h
src/view/engine/elements/: button.cpp  button.h  element.cpp  element.h  image.cpp  image.h  scene.cpp  scene.h  spriteGrid.cpp  spriteGrid.h  text.cpp  text.h  textInput.cpp  textInput.h
src/view/engine/includes/: stb_image.h
src/view/engine/shaders/: shader.cpp  shader.h
tests/: editorTest.cpp  engineTest.cpp  gameModeTest.cpp  launchTest.cpp  test.cpp  testClasses.h
view/: cliView.cpp  cliView.h  glView.cpp  glView.h  iGameView.h
view/elements/: button.cpp  button.h  element.h  scene.h
view/engine/: iRenderEngine.h  renderData.h  renderEngine.cpp  renderEngine.h
view/engine/TextRenderer/: TextRenderer.cpp  TextRenderer.h  TextRendererNew.cpp  TextRendererNew.h
view/engine/elements/: button.cpp  button.h  element.h  spriteGrid.cpp  spriteGrid.h  text.cpp  text.h
view/engine/shaders/: shader.cpp
